# tetr_online

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  reference_guideline.md  roadmap.md  rust-toolchain.toml  serve-embed.ts  serve.ts  skills-lock.json  tsconfig.json
.github/workflows/: ci.yml  trunk.yml  web.yml
analysis/elo-pareto/: README.md  configs.csv  elo.csv  elo_pareto.py  pairs.csv  scaling_analysis.py
assets/shaders/: crt.wgsl
benches/: README.md  ai.rs  engine.rs
benches/common/: mod.rs
crates/tetr-core/: Cargo.toml
crates/tetr-core/src/: lib.rs
crates/tetr-core/src/ai/: controller.rs  handicap.rs  mod.rs  movegen.rs  plan.rs  state.rs
crates/tetr-core/src/ai/eval/: cc2.rs  features.rs  mod.rs  weights.rs
crates/tetr-core/src/ai/policy/: mod.rs  search.rs
crates/tetr-core/src/ai/runner/: budgeted.rs  mod.rs  sliced.rs  sync.rs
crates/tetr-core/src/ai/search/: BEAM.md  beam.rs  best_first.rs  greedy.rs  mod.rs  pc_coverage.rs
crates/tetr-core/src/engine/: active_piece.rs  api.rs  attack.rs  bit_board.rs  board.rs  constants.rs  game_over.rs  garbage.rs  generator.rs  goals.rs  gravity.rs  lock_clear.rs  mod.rs  pieces.rs  scoring.rs  t_spin.rs  types.rs
crates/tetr-core/src/player/: das.rs  keyboard.rs  mod.rs
crates/tetr-embed/: Cargo.toml
crates/tetr-embed/src/: lib.rs
crates/tetr-nn/: Cargo.toml  README.md
crates/tetr-nn/assets/: value_net.safetensors
crates/tetr-nn/src/: lib.rs  net.rs  obs.rs  ort_backend.rs  serve.rs  shards.rs
crates/tetr-nn/tests/: forward_bench.rs  golden.rs  ort_throughput.rs  throughput.rs
crates/tetr-nn/tests/fixtures/pyref/: config.json  golden_v2.json  net_v2.safetensors
crates/tetr-nn/tests/fixtures/round0/: config.json  golden_v2.json  net_v2.safetensors
crates/tetr-research/: Cargo.toml  README.md  build.rs
crates/tetr-research/examples/: depth_probe.rs  e1_depth_race.rs  elo_pareto.rs  f2_champion_depth.rs  s_speculation.rs
crates/tetr-research/src/: accounting.rs  arm.rs  behavior.rs  bots.rs  cc2.rs  cli.rs  datagen.rs  downstack.rs  events.rs  fixtures.rs  gate0a.rs  instruments.rs  ledger.rs  lib.rs  main.rs  marathon.rs  pc.rs  progress.rs  registry.rs  rng.rs  seeds.rs  sprt.rs  versus.rs  versus_legacy.rs
crates/tetr-research/src/commands/: ab.rs  awareness.rs  behavior.rs  cc2_baseline.rs  cc2_native.rs  climb.rs  climb_app.rs  downstack.rs  marathon.rs  metric.rs  mod.rs  panel.rs  pc.rs  promote.rs  race.rs  runs.rs  sprt.rs  versus.rs
crates/tetr-research/src/search/: climb.rs  mod.rs  panel.rs
crates/tetr-research/tests/: eval_count.rs
crates/tetr-valuenet/: Cargo.toml
crates/tetr-valuenet/src/: encode.rs  lib.rs  net.rs
crates/tetr-valuenet/tests/: drives_beam.rs  golden.rs
docs/: adr-ai-compute-architecture.md  adr-board-unification.md  adr-data-architecture.md  adr-valuenet-strike.md  adr-versus-mode-ui.md  adr-versus-rules.md  labnote-adaptive-allocation.md  labnote-speculation-and-value-net.md  labnote-valuenet-strike.md  learned-evaluation-roadmap.md  performance-architecture-review.md  redesign-v2-foundation.md  research-directions.md  research-guide.md  value-net-postmortem.md  valuenet-runbook.md
docs/agents/: issue-tracker.md
docs/reviews/: feat-tetr-nn-solid-review.md
docs/tasks/: tetr-research-agent-ops-foundation.md
examples/: arena_smoke.rs  profile_beam.rs
models/conv_rb1/: config.json  golden.safetensors  value_net.safetensors
python/: README.md  pyproject.toml
python/tests/: test_model.py  test_target_audit.py  test_targets.py
python/tetrnn/: export.py  export_onnx.py  fit_slots.py  goldens.py  model.py  regen_pyref.py  round.py  shards.py  target_audit.py  targets.py  train.py
scripts/: build.ts  fps-probe.js  gate  loop-smoke  research-smoke  research.sql
src/: actions.rs  assets.rs  high_scores.rs  level.rs  lib.rs  main.rs  settings.rs  utils.rs  variant.rs  vfx.rs
src/ai/: controller.rs  difficulty.rs  handicap.rs  mod.rs  plan.rs  registry.rs  sandbox.rs  state.rs
src/ai/eval/: features.rs  mod.rs  weights.rs
src/ai/policy/: mod.rs  search.rs
src/ai/runner/: mod.rs  native.rs  sync.rs
src/ai/search/: greedy.rs  mod.rs
src/arena/: mod.rs  outcome.rs  runner.rs  summary.rs
src/core/: board.rs  constants.rs  generator.rs  mod.rs  pieces.rs
src/engine/: active_piece.rs  api.rs  attack.rs  board.rs  constants.rs  game_over.rs  generator.rs  goals.rs  gravity.rs  lock_clear.rs  lock_down.rs  mod.rs  pieces.rs  scoring.rs  t_spin.rs
src/features/: ambient_wave.rs  help.rs  high_scores.rs  hit_stop.rs  info_panel.rs  mod.rs  notifications.rs  options.rs  pause.rs  screen_shake.rs  sfx.rs
src/level/: actions.rs  common.rs  engine_bridge.rs  game_over.rs  mod.rs  placement_timer_bar.rs  readme.md  score.rs  sound_effects.rs
src/level/ui/: mod.rs  piece_previewer.rs  placement_timer_bar.rs  score_views.rs
src/player/: das.rs  keyboard.rs  mod.rs
src/postfx/: bloom.rs  crt.rs  mod.rs
src/screens/: help.rs  high_scores.rs  main_menu.rs  mod.rs  mode_select.rs  model_select.rs  options.rs  session_setup.rs  title.rs  versus_setup.rs
src/session/: feel.rs  mod.rs  overlay.rs  render.rs  skin.rs
src/storage/: mod.rs  native.rs  web.rs
src/ui/: focus.rs  mod.rs  widgets.rs
src/versus/: feel.rs  mod.rs  overlay.rs  render.rs
tests/: acceptance_das.rs  acceptance_drops_hold.rs  acceptance_game_over.rs  acceptance_goals.rs  acceptance_kick.rs  acceptance_lock_down.rs  acceptance_scoring.rs  acceptance_seven_bag.rs  acceptance_spawn.rs  acceptance_t_spin.rs
training/: .gitignore  pyproject.toml  train_value_net.py
wayfinder/leapfrog/: map.md
wayfinder/leapfrog/archive/: README.md
wayfinder/leapfrog/assets/: T01-purity-contract.md  T03-throughput-measurements.md  T08-design-freeze-PROPOSED.md  T11-gate0a-findings.md  pipeline-audit-2026-07-09.md
wayfinder/leapfrog/tickets/: datagen-driver.md  (+24 more)
web/: bundles.ts  index.html  main.tsx
web/embed/: component.tsx  controls.ts  element.tsx  index.ts  loop.ts  renderer.ts  themes.ts  wasm.ts
web/embed-demo/: demo.tsx  index.html
(+18 files in other folders)
