[package]
name = "tetr_online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.2"
bevy_asset_loader = "0.26.0"
itertools = "0.14.0"
rand = "0.10.1"

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_log",
    "bevy_state",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_render",
    "bevy_audio",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_core_pipeline",
    "vorbis",
    "png",
    "webgl2",
]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.release]
# optimize for size
opt-level = 'z'
#lto = "thin"
