[package]
name = "tetr_online"
version = "0.1.0"
edition = "2021"
# Benchmark targets are declared explicitly under `[[bench]]` below (each uses the
# criterion harness). Disable cargo's auto-discovery so the shared
# `benches/common/` fixture module is never mistaken for its own bench target.
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The `benches/` criterion suites are the only benchmark targets. The lib and bin
# carry no `#[bench]` fns, so opt them out of `cargo bench` — keeps its build and
# output limited to the real suites.
[lib]
bench = false

[[bin]]
name = "tetr_online"
bench = false

[dependencies]
array2d = "0.3.2"
bevy_asset_loader = "0.26.0"
itertools = "0.14.0"
rand = "0.10.1"
# Dev-only ECS inspector overlay (egui). Optional + behind the `dev` feature so
# release builds never pull or compile egui — keeps the size-optimized wasm
# clean. Run with `cargo run --features dev`. (Bevy 0.18 ↔ inspector 0.36.)
# default-features off: the inspector's defaults (and its `bevy_render` feature,
# required by `quick::WorldInspectorPlugin`) assume a 3D-capable Bevy — they fail
# to compile `Mesh::generate_tangents` and panic registering 3D types
# (GizmoConfigStore) that this curated 2D build never adds. So we skip the `quick`
# plugin and drive the inspector via the core manual API (DefaultInspectorConfigPlugin
# + bevy_inspector::ui_for_world), which needs none of those features. See lib.rs.
bevy-inspector-egui = { version = "0.36", default-features = false, features = [
    "egui_clipboard",
], optional = true }
# bevy_egui (the egui<->bevy bridge) as a DIRECT dep: bevy-inspector-egui only
# re-exports it behind its `bevy_render` feature (which we can't enable — see
# above), so we pull the matching 0.39 directly for EguiPlugin/EguiContext/egui.
bevy_egui = { version = "0.39", optional = true }

[features]
# Enables the in-game ECS inspector overlay (dev tooling). Off by default so it
# never touches release builds. Usage: `cargo run --features dev`.
dev = ["dep:bevy-inspector-egui", "dep:bevy_egui"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5.0"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = ["Window", "Storage"]

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_log",
    "bevy_state",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_audio",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_core_pipeline",
    "vorbis",
    "png",
    "webgl2",
]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.release]
# optimize for size
opt-level = 'z'
lto = "thin"

[dev-dependencies]
# Statistics-driven micro-benchmark harness for `benches/`. Dev-only: never
# compiled into `cargo build` or the size-optimized wasm/release binary, so it
# costs nothing against the shipping size budget. `html_reports` writes the
# criterion report (plots + history) under `target/criterion/`.
criterion = { version = "0.8", features = ["html_reports"] }

# Engine-core benchmarks: `Engine::step`, snapshotting, and the pure rule
# primitives the AI reuses (`lock_and_clear`, `classify_t_spin`).
[[bench]]
name = "engine"
harness = false

# AI benchmarks: placement movegen, the evaluator, the greedy planner, and
# end-to-end "bot plays N pieces" throughput.
[[bench]]
name = "ai"
harness = false
