[package]
name = "tetr_online"
version = "0.1.0"
edition = "2021"
license = "MIT"
# Benchmark targets are declared explicitly under `[[bench]]` below (each uses the
# criterion harness). Disable cargo's auto-discovery so the shared
# `benches/common/` fixture module is never mistaken for its own bench target.
autobenches = false

# Workspace root. The engine-agnostic core (engine + player + ai) lives in
# `crates/tetr-core` (no Bevy); `crates/tetr-embed` adds the wasm embed component.
[workspace]
members = ["crates/tetr-core", "crates/tetr-embed", "crates/tetr-research"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The `benches/` criterion suites are the only benchmark targets. The lib and bin
# carry no `#[bench]` fns, so opt them out of `cargo bench` — keeps its build and
# output limited to the real suites.
[lib]
bench = false

[[bin]]
name = "tetr_online"
bench = false

[dependencies]
# Engine-agnostic core (engine + player + ai), extracted to its own crate —
# pure Rust, no Bevy anywhere in its graph (the host adapts input itself via
# `keyboard_input_from_keybinds`).
tetr-core = { path = "crates/tetr-core" }
bevy_asset_loader = "0.26.0"
# Settings persistence (RON, via serde derives). `ron` is already in the graph
# transitively through `bevy_asset`; both are size-cheap and let `GameSettings`
# round-trip through derives instead of a hand-rolled key=value codec.
ron = "0.12"
serde = { version = "1", features = ["derive"] }
# Dev-only ECS inspector overlay (egui). Optional + behind the `dev` feature so
# release builds never pull or compile egui — keeps the size-optimized wasm
# clean. Run with `cargo run --features dev`. (Bevy 0.18 ↔ inspector 0.36.)
# default-features off: the inspector's defaults (and its `bevy_render` feature,
# required by `quick::WorldInspectorPlugin`) assume a 3D-capable Bevy — they fail
# to compile `Mesh::generate_tangents` and panic registering 3D types
# (GizmoConfigStore) that this curated 2D build never adds. So we skip the `quick`
# plugin and drive the inspector via the core manual API (DefaultInspectorConfigPlugin
# + bevy_inspector::ui_for_world), which needs none of those features. See lib.rs.
bevy-inspector-egui = { version = "0.36", default-features = false, features = [
    "egui_clipboard",
], optional = true }
# bevy_egui (the egui<->bevy bridge) as a DIRECT dep: bevy-inspector-egui only
# re-exports it behind its `bevy_render` feature (which we can't enable — see
# above), so we pull the matching 0.39 directly for EguiPlugin/EguiContext/egui.
bevy_egui = { version = "0.39", optional = true }

[features]
# Web renderer backend. Bevy bakes the wasm graphics backend in at compile time
# (`webgpu` overrides `webgl2`), so a single binary is built twice — once per
# feature — to produce the two web bundles. `webgl2` is the default so native
# `cargo run` and `cargo test` Just Work; the web build script passes
# `--no-default-features --features webgpu` for the WebGPU bundle. On native
# targets `bevy/webgl2` is inert (it only constrains the wasm wgpu backend).
# `bloom` is in `default` so native `cargo run`/`cargo test` get the full neon
# spectacle, but the web build is renderer-split: the WebGL2 bundle is built with
# `--no-default-features --features webgl2` (see scripts/build.ts) so it DROPS
# bloom, while the WebGPU bundle adds it back. WebGPU-first by design.
default = ["webgl2", "bloom"]
webgl2 = ["bevy/webgl2"]
webgpu = ["bevy/webgpu", "bloom"]
# Neon bloom / HDR glow (Tetris-Effect look). Pulls Bevy's `bevy_post_process`.
# Bevy 0.18's built-in bloom is NOT WebGL2-compatible, so this is deliberately
# absent from the shipped WebGL2 bundle and present on native + the WebGPU bundle.
# Gating the CODE on `feature = "bloom"` (camera HDR/bloom + over-bright glow
# colors) keeps the WebGL2 wasm lean and never lights up a broken path. A
# fine-grained feature, per the size policy — NOT the `2d`/`ui` collections.
bloom = ["bevy/bevy_post_process"]
# Enables the in-game ECS inspector overlay (dev tooling). Off by default so it
# never touches release builds. Usage: `cargo run --features dev`.
dev = ["dep:bevy-inspector-egui", "dep:bevy_egui"]
# Enables the play-evaluation harness (`src/arena/`) and its tests. Off by default
# so it never compiles into the shipped game. Usage: `cargo test --features arena`.
arena = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5.0"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = ["Window", "Storage"]

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_log",
    "bevy_state",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_audio",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_core_pipeline",
    "vorbis",
    "png",
    # NOTE: the web render backend (`webgl2`/`webgpu`) is NOT listed here — it is
    # driven by this crate's own `webgl2`/`webgpu` features (see `[features]`) so
    # the web build can produce both bundles from one binary. Default is webgl2.
    # Enables serde on Bevy types (notably `KeyCode`) so `GameSettings` keybinds
    # persist via plain serde derives + RON instead of a hand-rolled key codec.
    # A deliberate exception to the otherwise size-curated feature set.
    "serialize",
]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# Routes Rust panics to `console.error` with a readable stack instead of the
# opaque `unreachable executed` wasm trap. Wasm-only + tiny; installed in main().
console_error_panic_hook = "0.1"

[profile.release]
# optimize for size
opt-level = 'z'
lto = "thin"

# Dedicated profile for the shipped web bundles. Kept separate from `release` so
# the aggressive (slow-to-compile) full LTO + `panic = "abort"` never affect
# native release builds or the criterion benches (which inherit `release`).
# Used by `scripts/build.ts` via `cargo build --profile web`.
[profile.web]
inherits = "release"
opt-level = "z"     # size over speed — a 2D board is not compute-bound
lto = true          # full cross-crate LTO: smaller AND faster than thin
codegen-units = 1   # maximise optimisation/inlining opportunities
panic = "abort"     # drop unwinding tables (wasm doesn't unwind anyway)
strip = true        # strip symbols from the .wasm

[dev-dependencies]
# Statistics-driven micro-benchmark harness for `benches/`. Dev-only: never
# compiled into `cargo build` or the size-optimized wasm/release binary, so it
# costs nothing against the shipping size budget. `html_reports` writes the
# criterion report (plots + history) under `target/criterion/`.
criterion = { version = "0.8", features = ["html_reports"] }

# Engine-core benchmarks: `Engine::step`, snapshotting, and the pure rule
# primitives the AI reuses (`lock_and_clear`, `classify_t_spin`).
[[bench]]
name = "engine"
harness = false

# AI benchmarks: placement movegen, the evaluator, the greedy planner, and
# end-to-end "bot plays N pieces" throughput.
[[bench]]
name = "ai"
harness = false

# Usage demo / smoke measurement for the play-evaluation harness. Gated on the
# `arena` feature so `cargo test` skips it unless the harness is enabled.
# Run: `cargo run --release --example arena_smoke --features arena`.
[[example]]
name = "arena_smoke"
required-features = ["arena"]
