[package]
name = "tetr-core"
version = "0.1.0"
edition = "2021"
description = "Engine-agnostic Tetris rule core, player abstraction, and AI — no Bevy."

# No #[bench] fns live here; the criterion suites are declared in the game crate.
[lib]
bench = false

[dependencies]
array2d = "0.3.2"
itertools = "0.14.0"
# Deterministic, seeded RNG only (`StdRng::seed_from_u64`): the engine's 7-bag and
# the AI's imperfection sampling. No OS entropy is ever drawn, so this never needs a
# `getrandom` backend on its own — but `rand`'s default features still pull
# `getrandom` into the graph, so the wasm consumer (`tetr-embed`) enables its
# `wasm_js` backend feature. Native and the Bevy game are unaffected.
rand = "0.10.1"

[features]
# Enables the Bevy keyboard-input adapter (`RawKeyboardFrame::from_keyboard`). OFF by
# default so the core stays Bevy-free and the embed wasm stays tiny; the Bevy game
# turns it on. Enables Bevy's `keyboard` feature explicitly: the adapter reads
# `bevy::input::keyboard::KeyCode`, and with `default-features = false` that module is
# gated out unless `keyboard` is on. (Relying on the game's other Bevy features to
# unify it on is fragile — it breaks the instant this feature is built in isolation.)
bevy = ["dep:bevy", "bevy/keyboard"]

# Pinned to the game's Bevy version so the workspace resolves a single Bevy.
[dependencies.bevy]
version = "0.18.1"
default-features = false
optional = true
