[package]
name = "tetr-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Engine-agnostic Tetris rule core, player abstraction, and AI — no Bevy."
publish = false

# No #[bench] fns live here; the criterion suites are declared in the game crate.
[lib]
bench = false

[dependencies]
array2d = "0.3.2"
itertools = "0.14.0"
# Deterministic, seeded RNG only (`StdRng::seed_from_u64`): the engine's 7-bag and
# the AI's imperfection sampling. No OS entropy is ever drawn, so this never needs a
# `getrandom` backend on its own — but `rand`'s default features still pull
# `getrandom` into the graph, so the wasm consumer (`tetr-embed`) enables its
# `wasm_js` backend feature. Native and the Bevy game are unaffected.
rand = "0.10.1"
# FxHash (rustc's own hasher): fast, deterministic, dependency-light. Used only for
# the AI search's internal transposition table + movegen visited-set. The std default
# (SipHash) is cryptographic — pointless for an internal structure, and it was the top
# profile hotspot. FxHash is bit-identical here: the search keys by equality and never
# depends on hash values or map iteration order (movegen sorts its output).
rustc-hash = "2"
# Stack-allocated small vectors for the search hot path: the column bitboard
# (`Board::column_bits`, ≤16 wide) and the transposition key's board/queue. Avoids a
# per-candidate heap allocation — allocation was the top profile hotspot after FxHash.
smallvec = "1"

