[package]
name = "tetr-nn"
version = "0.1.0"
edition = "2021"

# A Burn-backed neural board evaluator for the Tetris AI. Engine-agnostic (no
# Bevy) so BOTH the game (`tetr_online`) and the headless `tetr-embed` research
# surface can depend on it.
#
# Backend split (see lib.rs docs for the full rationale): the default `ndarray`
# (CPU) backend is the IN-BROWSER + deterministic inference path — the
# `Evaluator::evaluate` seam is synchronous and wasm32 cannot block on a WebGPU
# readback on the main thread. The optional `wgpu` backend accelerates NATIVE +
# offline training / batched eval, where blocking GPU readback is fine.

[lib]
bench = false

[dependencies]
tetr-core = { path = "../tetr-core" }
# Pure-Rust weight interchange. We parse the JAX-exported tensors BY NAME and
# build the Burn `Linear` params directly — no `burn-import` ONNX/record
# key-remapping (the fragile seam). wasm-safe; small.
safetensors = "0.4"

[dependencies.burn]
version = "0.21"
default-features = false
# `ndarray` = pure-Rust CPU backend (wasm-safe + deterministic). `std` for the
# record/recorder IO. Kept minimal against the wasm size budget — no `train`,
# no `autodiff` (inference only on this side; training lives in JAX).
features = ["ndarray", "std"]

[features]
default = []
# Optional WebGPU / native-GPU backend (adds wgpu + CubeCL). NOT shipped in the
# browser bundle — gated on by native/offline tooling only.
wgpu = ["burn/wgpu"]
