[package]
name = "tetr-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The learned-evaluation subsystem: a two-board observation encoder, a small conv net forward (batched), decision shards that store exactly what was served, and the Evaluator bridge into the beam."

[lints]
workspace = true

[dependencies]
tetr-core = { path = "../tetr-core" }
# Weights in (PyTorch-exported), shards out — one interchange format.
safetensors = "0.4"
serde_json = "1"

# cblas_sgemm for the batched forward. macOS: Accelerate (always on).
[target.'cfg(target_os = "macos")'.dependencies]
cblas = "0.4"
blas-src = { version = "0.10", features = ["accelerate"] }

# Other targets opt in via `--features openblas`; without it the forward uses
# the plain-loop fallback (correct, slower).
[target.'cfg(not(target_os = "macos"))'.dependencies]
cblas = { version = "0.4", optional = true }
blas-src = { version = "0.10", features = ["openblas"], optional = true }

[features]
openblas = ["dep:cblas", "dep:blas-src"]
