[package]
name = "tetr-research"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless research & evaluation harness for the Tetris bot — behavior metrics, benchmarks, CC2 baselines."
publish = false

# Headless research + evaluation for the Tetris bot — Bevy-free, so it compiles
# and iterates fast. One binary (`tetr-research`, src/main.rs) runs named
# experiments from the in-code registry: `cargo run -p tetr-research -- list`.

[dependencies]
tetr-core = { path = "../tetr-core" }
# TBP client for the Cold Clear 2 baseline (native subprocess speaking JSON)
# and the run-ledger manifests.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parallel match evaluation (research-only; the game never links this). Matches
# are independent and internally deterministic, so order-stable collection
# keeps every suite bit-reproducible — see the parallel==serial gates.
rayon = "1"
# The CLI shell only (run/show/list/resume/runs); experiment configuration
# lives in src/registry.rs as code, never in flags.
clap = { version = "4.6.1", features = ["derive"] }

[lib]
bench = false

[lints]
workspace = true
