[package]
name = "tetr-research"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless research & evaluation harness for the Tetris bot — behavior metrics, benchmarks, CC2 baselines."
publish = false

# Headless research + evaluation for the Tetris bot — Bevy-free, so it compiles
# and iterates fast. One binary (`tetr-research`, src/main.rs) runs named
# experiments from the in-code registry: `cargo run -p tetr-research -- list`.

[dependencies]
tetr-core = { path = "../tetr-core" }
tetr-nn = { path = "../tetr-nn" }
# TBP client for the Cold Clear 2 baseline (native subprocess speaking JSON)
# and the run-ledger manifests.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parallel match evaluation (research-only; the game never links this). Matches
# are independent and internally deterministic, so order-stable collection
# keeps every suite bit-reproducible — see the parallel==serial gates.
rayon = "1"
# The CLI shell only (run/resume); experiment configuration lives in
# src/registry.rs as code, never in flags.
clap = { version = "4.6.1", features = ["derive"] }
# Stderr progress bars for the long silences (races, the TBP referee) —
# cosmetic only, auto-hidden off-TTY, never part of any record.
indicatif = "0.18"

[lib]
bench = false

[lints]
workspace = true

[dev-dependencies]
# Property tests for the arm grammar: fuzz the parser (never panics) and pin
# the Display round-trip (a parsed arm's receipt identity re-parses).
proptest = "1"
